--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "start": "nodemon --config nodemonrc.json $npm_package_config_dir_src/module/express/express-app.ts",
+    "start": "NODE_ENV=development nodemon --config nodemonrc.json $npm_package_config_dir_src/index.ts",
     "prebuild": "rm -rf $npm_package_config_dir_dist",
     "build": "tsc --project tsconfig.build.json",
     "make:barrel": "barrelsby --config=barrelsbyrc.json",
@@ -67,6 +67,7 @@
     "test:watch": "jest --no-cache --runInBand --watch"
   },
   "dependencies": {
+    "dotenv": "^16.4.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
