--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
@@ -77,6 +78,7 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^20.2.1",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "barrelsby": "^2.8.0",
