--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
